--- a/restaurant/src/components/Navbar.css
+++ b/restaurant/src/components/Navbar.css
@@ -1,18 +1,16 @@
 .navbar {
   position: fixed;
-  top: 0;
-  right: 0;
+  background-color: antiquewhite;
   width: 100vw;
   box-sizing: border-box;
-  display: flex;
-  flex-direction: row;
-  flex-flow: row;
-  justify-content: flex-end;
   padding: 2em;
-  margin: 0;
-  background-color: antiquewhite;
-  box-shadow: 8px 3px 3px rgba(118, 118, 118, 0.447);
   transition: all 0.5s ease;
+  display: flex;
+  justify-content: flex-end;
+  box-shadow: 0 4px 2px -2px gray;
+
+  top: 0;
+  right: 0;
 }
 
 .navbar a {
