--- a/restaurant/src/pages/Menu.css
+++ b/restaurant/src/pages/Menu.css
@@ -1,10 +1,3 @@
-body {
-  min-height: 100vh;
-  margin: 0;
-  display: flex;
-  flex-direction: column;
-}
-
 .menu-item-h3,
 .item-price,
 .item-description {
@@ -13,7 +6,12 @@ body {
 }
 
 .menu {
-  padding: 90px;
+  min-height: 100vh;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  place-items: center;
+  padding: 90px 0;
 }
 
 .menu-header {
@@ -27,6 +25,7 @@ body {
   border-radius: 10px;
   padding: 40px;
   margin-bottom: 2rem;
+  width: fit-content;
 }
 
 .category-btn {
@@ -64,7 +63,7 @@ body {
   gap: 35px;
   justify-content: center;
   text-align: left;
-  max-width: 1200px;
+  max-width: 75vw;
   margin: 0 auto;
 }
 
@@ -142,4 +141,8 @@ body {
 .tag.gluten-free {
   background-color: blue;
   color: white;
+}
+
+.error {
+  color: red;
 }
