--- a/restaurant/src/pages/Menu.css
+++ b/restaurant/src/pages/Menu.css
@@ -146,3 +146,22 @@
 .error {
   color: red;
 }
+
+.loader {
+  margin: auto;
+  border: 15px solid #000000;
+  border-radius: 50%;
+  border-top: 15px solid #663500;
+  width: 50px;
+  height: 50px;
+  animation: spinner 3s infinite;
+}
+
+@keyframes spinner {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
