--- a/restaurant/src/pages/Menu.css
+++ b/restaurant/src/pages/Menu.css
@@ -6,18 +6,36 @@
 }
 
 .menu {
-  min-height: 100vh;
+  /*min-height: 100vh;*/
   margin: 0;
   display: flex;
   flex-direction: column;
   place-items: center;
-  padding: 90px 0;
+  padding: 50px 0px;
 }
 
 .menu-header {
   text-align: middle;
+  align-items: center;
   font-size: 50px;
-  margin-bottom: 2rem;
+  color: white;
+}
+
+.menu-header-image {
+  min-height: 450px;
+  background-size: cover;
+  background-position: 50%;
+  background-repeat: no-repeat;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  margin-top: 80px;
 }
 
 .menu-border {
@@ -51,13 +69,6 @@
 }
 
 .menu-items {
-  /* display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 20px;
-  text-align: left;
-  justify-items: center;
-  border: 1px solid red; */
-
   display: flex;
   flex-wrap: wrap;
   gap: 35px;
@@ -76,6 +87,12 @@
   border-radius: 10px;
   padding: 10px;
   background-color: #fff;
+  transition: transform 0.3s;
+}
+
+.menu-item:hover {
+  transform: scale(1.01);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
 .item-image {
@@ -161,7 +178,68 @@
   0% {
     transform: rotate(0deg);
   }
+
   100% {
     transform: rotate(360deg);
   }
+}
+
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.modal-content {
+  display: flex;
+  background-color: rgb(255, 255, 255);
+  width: 47rem;
+  height: 15rem;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  padding: 30px;
+  background-color: #fff;
+  align-items: center;
+}
+
+.modal-image {
+  width: 45%;
+  height: 200%;
+  max-width: 250px;
+  max-height: 250px;
+  object-fit: scale-down;
+  margin-right: 50px;
+  margin-left: 50px;
+}
+
+.modal-details {
+  flex-grow: 1;
+}
+
+.modal-name {
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 10px;
+  text-align: left;
+}
+
+.modal-ingredients-header {
+  font-size: 20px;
+  margin-bottom: 5px;
+  text-align: left;
+  color: #555;
+}
+
+.modal-ingredients {
+  font-size: 16px;
+  font-style: italic;
+  text-align: left;
+  color: #555;
+  margin-right: 50px;
 }
