--- a/restaurant/src/pages/Menu.css
+++ b/restaurant/src/pages/Menu.css
@@ -91,8 +91,9 @@
 }
 
 .menu-item:hover {
-  transform: scale(1.01);
+  transform: scale(1.05);
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
 }
 
 .item-image {
