--- a/restaurant/src/pages/About.css
+++ b/restaurant/src/pages/About.css
@@ -25,7 +25,7 @@
 }
 
 .banner-text {
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   font-weight: 500;
   margin-bottom: 20px;
   line-height: 1.4;
@@ -39,7 +39,7 @@
   color: black;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 800px) {
   .banner-image {
     display: flex;
     flex-direction: column;
@@ -53,6 +53,6 @@
   .banner-text {
     font-size: medium;
     margin: 0;
-    padding-top: 50px;
+    padding: 50px;
   }
 }
